--- a/app/src/main/res/menu/menu_new_task.xml
+++ b/app/src/main/res/menu/menu_new_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.rauansatanbek.tasks.NewTask">
     <item
-        android:id="@+id/addIcon"
+        android:id="@+id/addNewTask"
         android:icon="@drawable/ic_check_white_24dp"
         app:showAsAction="always"
         android:title="add"/>
