--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -21,10 +21,12 @@
             android:gravity="center_vertical"
             android:text="Институт Благородных Роккерш 1"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@color/test_tc"
+            android:textColor="@color/white"
             android:layout_marginTop="8dp"
+            android:padding="10dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
+            android:background="@color/info"
             android:layout_alignParentStart="true" />
 
         <TextView
