--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,12 +7,22 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="rb_primary" > <item name="colorPrimary">@color/primary</item> </style>
+    <style name="rb_success" > <item name="colorPrimary">@color/success</item> </style>
+    <style name="rb_info" > <item name="colorPrimary">@color/info</item> </style>
+    <style name="rb_warning" > <item name="colorPrimary">@color/warning</item> </style>
+    <style name="rb_danger" > <item name="colorPrimary">@color/danger</item> </style>
+    <style name="rb_default" > <item name="colorPrimary">@color/light_gray</item> </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
+    <style name="spinnerStyle">
+        <item name="android:textSize">11dp</item>
+        <item name="android:textColor">#555</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
