Upgraded #3 allColors - access, primary + Dark

--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -22,7 +22,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/test" />
+    <include layout="@layout/new_task" />
 
 
 
