--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00695C</color>
-    <color name="colorPrimaryDark">#004D40</color>
-    <color name="colorAccent">#00BFA5</color>
+    <color name="colorPrimary">#1565C0</color>
+    <color name="colorPrimaryDark">#0D47A1</color>
+    <color name="colorAccent">#0275d8</color>
     <color name="buttonBC">#0cb754</color>
     <color name="buttonTC">#666</color>
     <color name="textColor">#444</color>
@@ -13,6 +13,7 @@
     <color name="button_grey">#757575</color>
     <color name="light_gray">#fff</color>
     <color name="items_bc">#fff</color>
+    <color name="title_color">#0275d8</color>
 
 <!--Success-->
     <color name="success_bc">#dff0d8</color>
