Upgraded #5 bg_color, corner radius to title, status

--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -16,17 +16,21 @@
 
         <TextView
             android:id="@+id/card_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="Институт Благородных Роккерш 1"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/white"
             android:layout_marginTop="8dp"
-            android:padding="10dp"
+            android:layout_marginBottom="4dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:background="@color/info"
+            android:background="@drawable/rounded_corner_for_title"
             android:layout_alignParentStart="true" />
 
         <TextView
@@ -34,8 +38,27 @@
             android:id="@+id/card_date"
             android:layout_below="@id/card_title"
             android:textSize="16sp"
+            android:paddingRight="4dp"
+            android:paddingLeft="4dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
             android:textColor="@color/test_tc"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Просрочено"
+            android:id="@+id/card_status"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/rounded_corner_for_status"
+            android:layout_below="@id/card_title"
+            android:layout_toRightOf="@id/card_date"
+            android:paddingRight="4dp"
+            android:paddingLeft="4dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <TextView
